Bug 507693 - The Tags list turns gray (unable) when I close a Book and open another one
Summary: The Tags list turns gray (unable) when I close a Book and open another one
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Microsoft Windows Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-31 14:27 UTC by Adilson Urso
Modified: 2025-08-01 07:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
The grayed transaction tags list (43.51 KB, image/jpeg)
2025-07-31 14:27 UTC, Adilson Urso
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adilson Urso 2025-07-31 14:27:10 UTC
Created attachment 183676 [details]
The grayed transaction tags list

When I change the Book file to another the Tags transaction list is grayed out and I can't even scroll the rows

STEPS TO REPRODUCE
1. Start KMymoney with the last open book
2. Go to TAGS
3. Select one tag from the list
4. Choose another book file
5. Go to TAGS
6. Select a TAG from the list

OBSERVED RESULT
The tag transaction list is showed but grayed (blocked)


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 11
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
5.2.0-8ccf45b
Comment 1 Thomas Baumgart 2025-07-31 16:21:01 UTC
Git commit 86e2cde21e30888d9f83c8fcf801d8b311c50464 by Thomas Baumgart.
Committed on 31/07/2025 at 16:20.
Pushed by tbaumgart into branch 'master'.

Clear tag selection on file close
FIXED-IN: 5.2.1

M  +15   -1    kmymoney/views/ktagsview.cpp
M  +2    -0    kmymoney/views/ktagsview.h

https://invent.kde.org/office/kmymoney/-/commit/86e2cde21e30888d9f83c8fcf801d8b311c50464
Comment 2 Thomas Baumgart 2025-08-01 07:00:07 UTC
Git commit a90465f563311ea17a3423eefc0843759e8f4aa6 by Thomas Baumgart.
Committed on 01/08/2025 at 04:23.
Pushed by tbaumgart into branch '5.2'.

Clear tag selection on file close
FIXED-IN: 5.2.1
(cherry picked from commit 86e2cde21e30888d9f83c8fcf801d8b311c50464)

M  +15   -1    kmymoney/views/ktagsview.cpp
M  +2    -0    kmymoney/views/ktagsview.h

https://invent.kde.org/office/kmymoney/-/commit/a90465f563311ea17a3423eefc0843759e8f4aa6