Clear tag selection on file close

BUG: 507693
FIXED-IN: 5.2.1